--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
       }
     }],
     "no-use-before-define": "off",
+    "no-case-declarations": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "max-len": ["error", { "code": 125 }],
     "import/no-extraneous-dependencies": [
