--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -36,6 +36,7 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
+    "typescript": "^4.0.3",
     "url-loader": "^2.3.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
