--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,6 +58,9 @@
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      },
+      "webpack": {
+        "config": "./webpack.dev.js"
       }
     }
   },
