--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.8.3",
     "core-js": "^3.4.2",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
@@ -57,6 +56,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
+    "regenerator-runtime": "^0.13.7",
     "styled-components": "^5.0.0",
     "styled-normalize": "^8.0.6",
     "styled-reboot": "^4.0.3"
