--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jest": true
   },
   "extends": ["plugin:react/recommended", "airbnb"],
   "parser": "@typescript-eslint/parser",
@@ -63,13 +64,5 @@
         "config": "./webpack.dev.js"
       }
     }
-  },
-  "overrides": [
-    {
-      "files": ["**/*.test.tsx", "**/*.test.jsx", "**/*.test.js, **/*.test.ts"],
-      "env": {
-        "jest": true
-      }
-    }
-  ]
+  }
 }
